Add read all before writing test